# BHOPAL-VCP-Displayer

./: .gitignore  CMakeLists.txt  LICENSE
documentation/: architecture.drawio  commands.txt
src/: main.cpp
src/Config/: InterfaceConfigLoader.cpp  InterfaceConfigLoader.hpp
src/DataDisplayer/: DataDispSFML.cpp  DataDispSFML.hpp  FactoryDisplay.hpp  IDataDisplayer.hpp
src/DataGrabber/: DataGrabbSerial.cpp  DataGrabbSerial.hpp  IDataGrabber.hpp
src/PreTest_boost/: PreTest_boost.hpp
src/PreTest_compiler/: PreTest_compiler.hpp
src/PreTest_nlohmann/: PreTest_nlohmann.hpp
src/PreTest_sfml/: PreTest_sfml.hpp
src/Utils/: AppEnvironment.cpp  AppEnvironment.hpp
src/__Collector/: Collector.hpp
src/__Core/: Core.hpp
src/__FlowPass/: FactoryFlowPass.hpp  FlowPass.hpp
